# ClawdbotHarmony

./: .gitignore  CHANGELOG.json  README.md  VOICEPRINT_ANALYSIS.md  auto_build_run.py  build-profile.json5  build.bat  build_and_install.bat  build_cli.bat  build_debug.bat  build_wsl.bat  build_wsl.sh  click_ok_and_build.py  click_signing.py  close_dialog.py  crop_icons.py  debug_build.bat  deveco_build.py  full_signing_setup.py  install_deps.bat  install_hap.bat  oh-package-lock.json5  open_signing.py  screenshot_check.py  split_icons.py  sync_and_run.py  take_screenshot.py
AppScope/: app.json5
docs/: CANN_Local_LLM_Integration_Guide.md  CANN_Local_Tool_Calling.md  CANN_Model_Import_Guide.md  context_awareness_design.md  context_intelligence_design_v5_en.md  training_sync_setup.md  情景智能框架设计文档_v2.md  情景智能框架设计文档_v3.md  情景智能框架设计文档_v5.md
entry/: build-profile.json5  oh-package-lock.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/cann_llm/: CMakeLists.txt  cann_wrapper.cpp  llm_core.h
entry/src/main/cpp/cann_llm_stub/: CMakeLists.txt  cann_llm_stub.cpp
entry/src/main/cpp/context_engine/: CMakeLists.txt  context_engine.h  context_engine_napi.cpp  decision_tree.cpp  linucb.cpp  rule_engine.cpp  soft_match.cpp
entry/src/main/cpp/data_tray/: CMakeLists.txt  data_tray.h  data_tray_napi.cpp
entry/src/main/cpp/dbscan_cluster/: CMakeLists.txt  dbscan_cluster.h  dbscan_cluster_napi.cpp
entry/src/main/cpp/feedback_learner/: CMakeLists.txt  feedback_learner.h  feedback_learner_napi.cpp
entry/src/main/cpp/geo_utils/: CMakeLists.txt  geo_utils.h  geo_utils_napi.cpp
entry/src/main/cpp/lib64/: README.md
entry/src/main/cpp/location_fusion/: CMakeLists.txt  location_fusion.h  location_fusion_napi.cpp
entry/src/main/cpp/motion_detector/: CMakeLists.txt  motion_detector_napi.cpp  sampling_strategy_napi.cpp
entry/src/main/cpp/place_learner/: CMakeLists.txt  place_signal_learner.h  place_signal_learner_napi.cpp
entry/src/main/cpp/sleep_pattern/: CMakeLists.txt  sleep_pattern.h  sleep_pattern_napi.cpp
entry/src/main/cpp/training_sync/: CMakeLists.txt  training_sync.cpp  training_sync.h  training_sync_napi.cpp
entry/src/main/cpp/types/libcann_llm/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libdata_tray/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libdbscan/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libgeo_utils/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/liblocation_fusion/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libvoiceprint/: index.d.ts  oh-package.json5
entry/src/main/cpp/voiceprint/: CMakeLists.txt  voiceprint_napi.cpp
entry/src/main/ets/common/: Constants.ets  I18n.ets  LogService.ets
entry/src/main/ets/components/: ConversationCard.ets  GeofenceSuggestionCard.ets  MarkdownText.ets  MessageBubble.ets  RecommendationFeedbackCard.ets  SessionDrawer.ets  SkillCard.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: ExperiencePack.ets  Models.ets
entry/src/main/ets/pages/: AboutRoutePage.ets  CanvasPage.ets  ChatPage.ets  ContextSettingsPage.ets  ConversationsPage.ets  ExperienceRoutePage.ets  HelloWorldPage.ets  Index.ets  LogPage.ets  LogRoutePage.ets  LogViewerPage.ets  LoginPage.ets  MemoryPage.ets  RuleManagementPage.ets  SettingsPage.ets  SettingsRoutePage.ets  SkillsPage.ets
entry/src/main/ets/service/: AIService.ets  CANNLocalService.ets  ConfigManager.ets  CustomSkillService.ets  EmotionAnalyzer.ets  ExperienceStorage.ets  FeishuBotService.ets  IntentClassifier.ets  LocalAsrService.ets  MemoryService.ets  ModuleMonitor.ets  SessionService.ets  SilentModeExtractor.ets  SilentModeService.ets  SkillData.ets  VadService.ets  VoiceprintService.ets
entry/src/main/ets/service/context/: BehaviorLogger.ets  ContextAwarenessService.ets  ContextEngine.ets  ContextModels.ets  DataTray.ets  Dbscan.ets  DigitalWorldService.ets  FeedbackService.ets  GeoCodingService.ets  GeoUtils.ets  GeofenceManager.ets  HabitChainService.ets  LLMFallbackService.ets  LocationDiscoveryService.ets  LocationFusionNative.ets  LocationFusionService.ets  PlaceAutoDiscoveryService.ets  PlaceCategoryService.ets  SensorDataTray.ets  TrainingDataSync.ets  VisionAnalysisService.ets
entry/src/main/ets/service/embedding/: LocalEmbedding.ets  LocalTokenizer.ets  LocalTransformer.ets
entry/src/main/ets/service/gateway/: CalendarCapability.ets  CameraCapability.ets  CanvasCapability.ets  EmailCapability.ets  GatewayModels.ets  GatewayProtocol.ets  GatewaySession.ets  MicrophoneCapability.ets  NodeRuntime.ets  NotificationCapability.ets  ScreenCapability.ets  (+1 more)
scripts/: _build.bat  auto_build_run.py  auto_signing.py  build_app.py  build_wsl.bat  check_deveco.py  clean_and_build.py  click_signing2.py  click_signing3.py  click_signing_final.py  click_signing_tab.py  click_signing_v2.py  deploy.bat  deploy_cann_model.bat  deploy_cann_model.sh  download_sherpa_onnx.sh  generate-changelog.js  just_run.py  navigate_signing.py  pre-commit-tests.sh  run_app.py  screenshot.py  ssh_deploy.py  start_app.bat  test_cann_system_prompt.bat  test_pyautogui.py  trigger_run.py
server/: training-server.js  training-server.service
tests/: run_all.sh
tests/context_ai/unit/: test_noise_encoder.js
tests/functional/: test_agent_event_dedup.js  test_capability_mapping.js  test_connection_state_machine.js  test_event_state_detection.js  test_i18n_completeness.js  test_version_consistency.sh
tests/lib/: assert.js  mock-websocket.js  test-runner.js
tests/scenario/: test_chat_message_flow.js  test_dedup_agent_vs_chat.js  test_gateway_connect_flow.js  test_invoke_flow.js  test_reconnection.js
tests/unit/: test_build_client_info.js  test_build_media_url.js  test_build_node_options.js  test_connection_state.js  test_constants.js  test_extract_a2ui_content.js  test_gateway_protocol.js  test_handle_agent_event.js  test_handle_chat_event.js  test_i18n.js  test_invoke_result.js  test_is_loopback.js  test_models.js  test_resolve_avatar_url.js  test_update_status.js
(+11 files in other folders)
